--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Code with a view</title>
-        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body id="home">
         <main>
@@ -27,6 +27,6 @@
 
             </section>
         </main>
-    <script src="assets/js/main.js" type="application/javascript"></script>
+    <script src="main.js" type="application/javascript"></script>
     </body>
 </html>
